Fix pagination and add jump to address

--- a/static/symbolList/style.css
+++ b/static/symbolList/style.css
@@ -29,7 +29,7 @@ button, input, select {
     display: inline;
 }
 
-#symbolSearchDiv {
+.symbolSearchDiv {
     margin-top: 30px;
 }
 
